# Blackcell

./: .gitignore  LICENSE  README.md  install.sh  uninstall.sh
blackcell-watchdog/: README.md  pyproject.toml
blackcell-watchdog/scripts/: build_deb.py
blackcell-watchdog/src/watchdog/: cli.py  config.py  doctor.py  installer.py  migrate.py  runtime.py
blackcell-watchdog/src/watchdog/tui/: __init__.py  app.py
watchdog/: .gitignore  README.md  pyproject.toml
watchdog/src/watchdog/: __init__.py  cli.py  config.py  db.py  doctor.py  installer.py  migrate.py  sessions.py
